Vertical alignment issues fixed.

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@
   border: 0;
   outline: 0;
   font-size: 100%;
-  vertical-align: middle;
   background: transparent;
   font-family: 'Share Tech Mono', monospace;
   text-shadow: none;
@@ -144,7 +143,6 @@ kbd, .info kbd {
   font-size: 11px;
   line-height: 10px;
   color: #444d56;
-  vertical-align: middle;
   background-color: #fafbfc;
   border: solid 1px #c6cbd1;
   border-bottom-color: #959da5;
@@ -238,7 +236,6 @@ kbd:hover {
 .info .fa {
   font-family: 'FontAwesome';
   color: #ff851b;
-  vertical-align: middle;
 }
 
 .info .fa:hover {
@@ -374,7 +371,6 @@ form {
 
 .content li strong .variation {
   display: none;
-  vertical-align: top;
   cursor: pointer;
 }
 
